# replit-commercial

./: .replit  README.md  package-lock.json  package.json  test_functionality.py
Replit Commercial RE Calc/: pyproject.toml  replit.nix  setup_replit.py  start.py  test_setup.py
Replit Commercial RE Calc/backend/: requirements.txt
Replit Commercial RE Calc/backend/app/: main_simple.py
Replit Commercial RE Calc/backend/app/api/routes/: analysis.py  auth.py  deals.py  files.py
Replit Commercial RE Calc/backend/app/core/: config.py  database.py
Replit Commercial RE Calc/backend/app/models/: base.py  deal.py  rent_roll.py  user.py
Replit Commercial RE Calc/frontend/: next.config.js  package-lock.json  package.json
Replit Commercial RE Calc/frontend/.next/: _events.json  trace
Replit Commercial RE Calc/frontend/.next/cache/: config.json
Replit Commercial RE Calc/frontend/.next/server/: _error.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
Replit Commercial RE Calc/frontend/.next/server/app/: _not-found_client-reference-manifest.js  not-found.js  not-found_client-reference-manifest.js  page.js  page_client-reference-manifest.js
Replit Commercial RE Calc/frontend/.next/types/app/: layout.ts  (+1 more)
Replit Commercial RE Calc/frontend/src/app/: globals.css  layout.tsx  page.tsx
Replit Commercial RE Calc/frontend/src/components/: DealAnalyzer.tsx  DealInputForm.tsx  DealResults.tsx  LoadingSpinner.tsx  SensitivityPanel.tsx
Replit Commercial RE Calc/frontend/src/types/: index.ts
(+132 files in other folders)
