[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commercial-re-calc"
version = "1.0.0"
description = "AI-Enhanced Deal Analyzer for Commercial Real Estate"
authors = [{name = "Commercial RE Calc Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "python-multipart==0.0.6",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "openai==1.3.7",
    "pandas==2.1.4",
    "openpyxl==3.1.2",
    "tabula-py==2.8.2",
    "pdfplumber==0.10.3",
    "weasyprint==60.2",
    "stripe==7.8.0",
    "httpx==0.25.2",
    "numpy==1.25.2",
    "numpy-financial==1.0.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "flake8==6.1.0",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 